--- a/Template/词缀.md
+++ b/Template/词缀.md
@@ -4,16 +4,16 @@ tags:
 # Means
 
 # words
-|             |     | **ion** | **al** | **able** | **ant** |
-| ----------- | --- | ------- | ------ | -------- | ------- |
-|             |     |         |        |          |         |
-| **ex**      |     |         |        |          |         |
-| **in**      |     |         |        |          |         |
-| **pro/pre** |     |         |        |          |         |
-| **re**      |     |         |        |          |         |
-| **con**     |     |         |        |          |         |
-| **dis**     |     |         |        |          |         |
-| **sub**     |     |         |        |          |         |
-| **sus**     |     |         |        |          |         |
-| **ad**      |     |         |        |          |         |
-|             |     |         |        |          |         |
+|             |     | **ion** | **al** | **able** | **ant** | **ate** |
+| ----------- | --- | ------- | ------ | -------- | ------- | ------- |
+|             |     |         |        |          |         |         |
+| **ex**      |     |         |        |          |         |         |
+| **in**      |     |         |        |          |         |         |
+| **pro/pre** |     |         |        |          |         |         |
+| **re**      |     |         |        |          |         |         |
+| **con**     |     |         |        |          |         |         |
+| **dis**     |     |         |        |          |         |         |
+| **sub**     |     |         |        |          |         |         |
+| **sus**     |     |         |        |          |         |         |
+| **ad**      |     |         |        |          |         |         |
+|             |     |         |        |          |         |         |
